Colaboratory を使用して作成しました

--- a/ai_calc_learn.ipynb
+++ b/ai_calc_learn.ipynb
@@ -28,6 +28,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Af1MtjVWV4Vw",
+        "colab_type": "text"
+      },
+      "source": [
+        "勉強用コード\n",
+        "\n",
+        "学習済みモデルを使用する。\n",
+        "ph1: 加算する学習モデルを作成\n",
+        "ph2:四則演算する学習モデルを作成"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GhX4v7sXiZA6",
         "colab_type": "text"
       },
@@ -35,6 +49,16 @@
         "https://qiita.com/Sa2Knight/items/221be46f2702ae453ba9\n",
         "を参考に足し算を学習する学習モデルを作成する\n",
         "モデルは保存する。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Gzj5takscaBD",
+        "colab_type": "text"
+      },
+      "source": [
+        "加算学習"
       ]
     },
     {
@@ -73,7 +97,12 @@
         "\n",
         "     # 標準入力から計算式を取得\n",
         "     print('> ', end='')\n",
-        "     x, y = list(map(lambda x: int(x), input().split(' ')))\n",
+        "     inStr = input()\n",
+        "    \n",
+        "     if inStr == 'q':\n",
+        "      break\n",
+        "        \n",
+        "     x, y = list(map(lambda x: int(x), inStr.split(' ')))\n",
         "\n",
         "     # 学習モデルを用いて回答を取得し、標準出力\n",
         "     predected_answer = model.predict([[x, y]])\n",
@@ -90,41 +119,6 @@
       },
       "source": [
         "保存したモデルを使う"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YoTQI5QAPU1a",
-        "colab_type": "code",
-        "outputId": "14d483cd-819d-4206-8b8a-8178389b29ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "from pandas import DataFrame\n",
-        "from sklearn import linear_model\n",
-        "import pickle\n",
-        "\n",
-        "with open('model.pickle', mode='rb') as fp:\n",
-        "  model = pickle.load(fp)\n",
-        "  \n",
-        "  # 加算\n",
-        "  x, y = 10, 20\n",
-        "  predected_answer = model.predict([[x, y]])\n",
-        "  print(\"{0} + {1} = {3}\".format(x, y, z, int(predected_answer[0])))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "10 + 20 = 30\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -151,15 +145,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I5mJo1qKkf3i",
+        "id": "YoTQI5QAPU1a",
         "colab_type": "code",
-        "outputId": "48cf698e-b238-4275-b772-458a53b938ad",
+        "colab": {}
+      },
+      "source": [
+        "from pandas import DataFrame\n",
+        "from sklearn import linear_model\n",
+        "import pickle\n",
+        "\n",
+        "with open('model.pickle', mode='rb') as fp:\n",
+        "  model = pickle.load(fp)\n",
+        "  \n",
+        "  # 加算\n",
+        "  x, y = 10, 20\n",
+        "  predected_answer = model.predict([[x, y]])\n",
+        "  print(\"{0} + {1} = {3}\".format(x, y, z, int(predected_answer[0])))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LCeMlarhclUK",
+        "colab_type": "text"
+      },
+      "source": [
+        "csvファイルからデータを読み込み学習させる。\n",
+        "\n",
+        "csvファイルはgdrive上に用意するためgdriveをマウントする。\n",
+        "colaboratory 上でのCSVファイルの読み込みは下記を参照\n",
+        "https://qiita.com/uni-3/items/201aaa2708260cc790b8"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9lZ4JKh1bgdQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0y5JiL07-Am5",
+        "colab_type": "text"
+      },
+      "source": [
+        "csv ファイルからデータ読み込み"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SVYZKtcBcKog",
+        "colab_type": "code",
+        "outputId": "65051410-b8c2-4cd9-a332-323c55fa8716",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
+        "import pandas as pd\n",
         "from pandas import DataFrame\n",
         "from sklearn import linear_model\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -169,6 +225,11 @@
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
         "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import sys\n",
+        "import os\n",
+        "import pickle\n",
+        "\n",
         "h = .02  # step size in the mesh\n",
         "\n",
         "classifiers = [\n",
@@ -183,111 +244,193 @@
         "    QuadraticDiscriminantAnalysis()]\n",
         "\n",
         "\n",
-        "# １番目は演算子 0:\"+\", 1:\"-\"\n",
-        "formulas = DataFrame([\n",
-        "    [0, 0, 0],\n",
-        "    [0, 0, 1],\n",
-        "    [0, 0, 2],\n",
-        "    [0, 1, 0],\n",
-        "    [0, 1, 1],\n",
-        "    [0, 1, 2],\n",
-        "    [0, 2, 0],\n",
-        "    [0, 2, 1],\n",
-        "    [0, 2, 2],\n",
-        "    [1, 0, 0],\n",
-        "    [1, 0, 1],\n",
-        "    [1, 0, 2],\n",
-        "    [1, 1, 0],\n",
-        "    [1, 1, 1],\n",
-        "    [1, 1, 2],\n",
-        "    [1, 2, 0],\n",
-        "    [1, 2, 1],\n",
-        "    [1, 2, 2]\n",
-        "])\n",
-        "answers = DataFrame([0, 1, 2, 1, 2, 3, 2, 3, 4, 0, -1, -2, 1, 0, -1, 2, 1, 0])\n",
+        "# test file existence\n",
+        "testDataFile = \"drive/My Drive/Colab Notebooks/data.csv\"\n",
+        "if os.path.isfile(testDataFile) == False:\n",
+        "  print(\"file not found\")\n",
+        "  sys.exit()\n",
+        "  \n",
         "\n",
+        "# read file and split data\n",
+        "data = pd.read_csv(testDataFile, header=0)\n",
+        "X = data.loc[:, ['ope', '1st', '2nd']]\n",
+        "Y = data.loc[:, ['ans']]\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, train_size=0.8)\n",
+        "\n",
+        "\n",
+        "#learning\n",
         "for model in classifiers:\n",
-        "  print(model.__class__.__name__)\n",
-        "  model.fit(formulas, answers)\n",
-        "\n",
-        "  # 加算\n",
-        "  x, y, z = 0, 10, 20\n",
-        "  predected_answer = model.predict([[x, y, z]])\n",
-        "  print(\"{0} {1} {2} = {3}\".format(x, y, z, int(predected_answer[0])))\n",
-        "\n",
-        "  # 減産\n",
-        "  x, y, z = 1, 10, 20\n",
-        "  predected_answer = model.predict([[x, y, z]])\n",
-        "  print(\"{0} {1} {2} = {3}\".format(x, y, z, int(predected_answer[0])))\n",
-        "\n",
-        "  "
+        "  print(model.__class__.__name__)  \n",
+        "  filename = \"drive/My Drive/Colab Notebooks/\"\n",
+        "  filename += model.__class__.__name__\n",
+        "  filename += \".pickle\"\n",
+        "  print(filename)\n",
+        "  model.fit(X_train, Y_train)\n",
+        "  print(model.score(X_test, Y_test))\n",
+        "  print(\"-------\")\n",
+        "  \n",
+        "  with open(filename, mode='wb') as fp:\n",
+        "    pickle.dump(model, fp)"
       ],
-      "execution_count": 0,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "KNeighborsClassifier\n",
-            "0 10 20 = 0\n",
-            "1 10 20 = -1\n",
+            "drive/My Drive/Colab Notebooks/KNeighborsClassifier.pickle\n",
+            "0.8813559322033898\n",
+            "-------\n",
             "SVC\n",
-            "0 10 20 = 2\n",
-            "1 10 20 = 2\n",
+            "drive/My Drive/Colab Notebooks/SVC.pickle\n",
+            "0.2033898305084746\n",
+            "-------\n",
             "SVC\n",
-            "0 10 20 = 2\n",
-            "1 10 20 = 2\n",
+            "drive/My Drive/Colab Notebooks/SVC.pickle\n",
+            "0.9788135593220338\n",
+            "-------\n",
             "DecisionTreeClassifier\n",
-            "0 10 20 = 4\n",
-            "1 10 20 = 0\n",
+            "drive/My Drive/Colab Notebooks/DecisionTreeClassifier.pickle\n",
+            "0.3305084745762712\n",
+            "-------\n",
             "RandomForestClassifier\n",
-            "0 10 20 = 4\n",
-            "1 10 20 = 0\n",
+            "drive/My Drive/Colab Notebooks/RandomForestClassifier.pickle\n",
+            "0.5127118644067796\n",
+            "-------\n",
             "AdaBoostClassifier\n",
-            "0 10 20 = 2\n",
-            "1 10 20 = -2\n",
-            "GaussianNB\n",
-            "0 10 20 = 2\n",
-            "1 10 20 = 2\n",
-            "LinearDiscriminantAnalysis\n",
-            "0 10 20 = 4\n",
-            "1 10 20 = 4\n",
-            "QuadraticDiscriminantAnalysis\n"
+            "drive/My Drive/Colab Notebooks/AdaBoostClassifier.pickle\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:49: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:51: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:49: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:51: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n"
           ],
           "name": "stderr"
         },
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-2c715c59f0a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclassifiers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformulas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manswers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m   \u001b[0;31m# 加算\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    685\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    686\u001b[0m                 raise ValueError('y has only 1 sample in class %s, covariance '\n\u001b[0;32m--> 687\u001b[0;31m                                  'is ill defined.' % str(self.classes_[ind]))\n\u001b[0m\u001b[1;32m    688\u001b[0m             \u001b[0mXgc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXg\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmeang\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    689\u001b[0m             \u001b[0;31m# Xgc = U * S * V.T\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: y has only 1 sample in class -2, covariance is ill defined."
-          ]
+          "output_type": "stream",
+          "text": [
+            "0.11864406779661017\n",
+            "-------\n",
+            "GaussianNB\n",
+            "drive/My Drive/Colab Notebooks/GaussianNB.pickle\n",
+            "0.22033898305084745\n",
+            "-------\n",
+            "LinearDiscriminantAnalysis\n",
+            "drive/My Drive/Colab Notebooks/LinearDiscriminantAnalysis.pickle\n",
+            "0.19491525423728814\n",
+            "-------\n",
+            "QuadraticDiscriminantAnalysis\n",
+            "drive/My Drive/Colab Notebooks/QuadraticDiscriminantAnalysis.pickle\n",
+            "0.0\n",
+            "-------\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:693: UserWarning: Variables are collinear\n",
+            "  warnings.warn(\"Variables are collinear\")\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:717: RuntimeWarning: divide by zero encountered in power\n",
+            "  X2 = np.dot(Xm, R * (S ** (-0.5)))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:717: RuntimeWarning: invalid value encountered in multiply\n",
+            "  X2 = np.dot(Xm, R * (S ** (-0.5)))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:720: RuntimeWarning: divide by zero encountered in log\n",
+            "  u = np.asarray([np.sum(np.log(s)) for s in self.scalings_])\n"
+          ],
+          "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NGamz-MCC5oI",
+        "colab_type": "text"
+      },
+      "source": [
+        "学習モデルを使って推論\n",
+        "90%のスコアのSVCで推論させたが、数値が小さいときはいいけど、2桁になるともうダメ。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nAf3ZCeXC8fo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "43566df7-7500-4283-877f-77a1625f9ce5"
+      },
+      "source": [
+        "from pandas import DataFrame\n",
+        "from sklearn import linear_model\n",
+        "import pickle\n",
+        "\n",
+        "filename = \"drive/My Drive/Colab Notebooks/\"\n",
+        "filename += \"SVC\"\n",
+        "filename += \".pickle\"\n",
+        "\n",
+        "\n",
+        "with open(filename, mode='rb') as fp:\n",
+        "  model = pickle.load(fp)\n",
+        "  \n",
+        "  # 加算\n",
+        "  ope, x, y = 0, 100, 200\n",
+        "  predected_answer = model.predict([[ope, x, y]])\n",
+        "  print(\"{0} ,{1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 ,100, 200 = 9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VOkZWQyeCmfb",
+        "colab_type": "text"
+      },
+      "source": [
+        "deep learning で学習"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5qGJYHiwCpxU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
