Colaboratory を使用して作成しました

--- a/ai_calc_learn.ipynb
+++ b/ai_calc_learn.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,15 +29,160 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "LCeMlarhclUK",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 準備\n",
+        "csvファイルからデータを読み込み学習させる。\n",
+        "\n",
+        "csvファイルはgdrive上に用意するためgdriveをマウントする。\n",
+        "colaboratory 上でのCSVファイルの読み込みは下記を参照\n",
+        "https://qiita.com/uni-3/items/201aaa2708260cc790b8"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9lZ4JKh1bgdQ",
+        "colab_type": "code",
+        "outputId": "40d04d4a-a474-4bda-fccd-f2396d724dc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XU9Rs2X32RTN",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jTx6tGY6WGx8",
+        "colab_type": "code",
+        "outputId": "3680de1f-1e67-4ea4-8c24-176f9026b9b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.test.gpu_device_name()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/device:GPU:0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A97vg8Tm2UeZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 学習用データ作成"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JA7ouKHF2ZYq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "5e3de4d7-ca12-42c3-aa2b-a03e25fea989"
+      },
+      "source": [
+        "import pdb\n",
+        "pdb.set_trace()\n",
+        "\n",
+        "f = random.random()"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--Return--\n",
+            "> <ipython-input-44-7837b9b26f41>(2)<module>()->None\n",
+            "-> pdb.set_trace()\n",
+            "(Pdb) h\n",
+            "\n",
+            "Documented commands (type help <topic>):\n",
+            "========================================\n",
+            "EOF    c          d        h         list      q        rv       undisplay\n",
+            "a      cl         debug    help      ll        quit     s        unt      \n",
+            "alias  clear      disable  ignore    longlist  r        source   until    \n",
+            "args   commands   display  interact  n         restart  step     up       \n",
+            "b      condition  down     j         next      return   tbreak   w        \n",
+            "break  cont       enable   jump      p         retval   u        whatis   \n",
+            "bt     continue   exit     l         pp        run      unalias  where    \n",
+            "\n",
+            "Miscellaneous help topics:\n",
+            "==========================\n",
+            "exec  pdb\n",
+            "\n",
+            "(Pdb) c\n",
+            "aaa\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Af1MtjVWV4Vw",
         "colab_type": "text"
       },
       "source": [
-        "勉強用コード\n",
+        "# 勉強用コード\n",
         "\n",
         "学習済みモデルを使用する。\n",
-        "ph1: 加算する学習モデルを作成\n",
-        "ph2:四則演算する学習モデルを作成"
+        "*   ph1: 加算する学習モデルを作成\n",
+        "*   ph2:四則演算する学習モデルを作成\n",
+        "\n"
       ]
     },
     {
@@ -168,34 +314,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LCeMlarhclUK",
-        "colab_type": "text"
-      },
-      "source": [
-        "csvファイルからデータを読み込み学習させる。\n",
-        "\n",
-        "csvファイルはgdrive上に用意するためgdriveをマウントする。\n",
-        "colaboratory 上でのCSVファイルの読み込みは下記を参照\n",
-        "https://qiita.com/uni-3/items/201aaa2708260cc790b8"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9lZ4JKh1bgdQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0y5JiL07-Am5",
         "colab_type": "text"
       },
@@ -208,11 +326,7 @@
       "metadata": {
         "id": "SVYZKtcBcKog",
         "colab_type": "code",
-        "outputId": "65051410-b8c2-4cd9-a332-323c55fa8716",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -272,91 +386,8 @@
         "  with open(filename, mode='wb') as fp:\n",
         "    pickle.dump(model, fp)"
       ],
-      "execution_count": 94,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "KNeighborsClassifier\n",
-            "drive/My Drive/Colab Notebooks/KNeighborsClassifier.pickle\n",
-            "0.8813559322033898\n",
-            "-------\n",
-            "SVC\n",
-            "drive/My Drive/Colab Notebooks/SVC.pickle\n",
-            "0.2033898305084746\n",
-            "-------\n",
-            "SVC\n",
-            "drive/My Drive/Colab Notebooks/SVC.pickle\n",
-            "0.9788135593220338\n",
-            "-------\n",
-            "DecisionTreeClassifier\n",
-            "drive/My Drive/Colab Notebooks/DecisionTreeClassifier.pickle\n",
-            "0.3305084745762712\n",
-            "-------\n",
-            "RandomForestClassifier\n",
-            "drive/My Drive/Colab Notebooks/RandomForestClassifier.pickle\n",
-            "0.5127118644067796\n",
-            "-------\n",
-            "AdaBoostClassifier\n",
-            "drive/My Drive/Colab Notebooks/AdaBoostClassifier.pickle\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:51: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:51: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "0.11864406779661017\n",
-            "-------\n",
-            "GaussianNB\n",
-            "drive/My Drive/Colab Notebooks/GaussianNB.pickle\n",
-            "0.22033898305084745\n",
-            "-------\n",
-            "LinearDiscriminantAnalysis\n",
-            "drive/My Drive/Colab Notebooks/LinearDiscriminantAnalysis.pickle\n",
-            "0.19491525423728814\n",
-            "-------\n",
-            "QuadraticDiscriminantAnalysis\n",
-            "drive/My Drive/Colab Notebooks/QuadraticDiscriminantAnalysis.pickle\n",
-            "0.0\n",
-            "-------\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:693: UserWarning: Variables are collinear\n",
-            "  warnings.warn(\"Variables are collinear\")\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:717: RuntimeWarning: divide by zero encountered in power\n",
-            "  X2 = np.dot(Xm, R * (S ** (-0.5)))\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:717: RuntimeWarning: invalid value encountered in multiply\n",
-            "  X2 = np.dot(Xm, R * (S ** (-0.5)))\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/discriminant_analysis.py:720: RuntimeWarning: divide by zero encountered in log\n",
-            "  u = np.asarray([np.sum(np.log(s)) for s in self.scalings_])\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -374,11 +405,7 @@
       "metadata": {
         "id": "nAf3ZCeXC8fo",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "43566df7-7500-4283-877f-77a1625f9ce5"
+        "colab": {}
       },
       "source": [
         "from pandas import DataFrame\n",
@@ -398,16 +425,8 @@
         "  predected_answer = model.predict([[ope, x, y]])\n",
         "  print(\"{0} ,{1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
       ],
-      "execution_count": 99,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0 ,100, 200 = 9\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -424,13 +443,121 @@
       "metadata": {
         "id": "5qGJYHiwCpxU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "0e63b7bd-f9c5-4d97-e840-e20e66fe4f89"
       },
       "source": [
-        ""
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense\n",
+        "from keras.utils import plot_model\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import pandas as pd\n",
+        "import sys\n",
+        "import os\n",
+        "\n",
+        "# test file existence\n",
+        "testDataFile = \"drive/My Drive/Colab Notebooks/data.csv\"\n",
+        "if os.path.isfile(testDataFile) == False:\n",
+        "  print(\"file not found\")\n",
+        "  sys.exit()\n",
+        "\n",
+        "# read file and split data\n",
+        "data = pd.read_csv(testDataFile, header=0)\n",
+        "X = data.loc[:, ['ope', '1st', '2nd']]\n",
+        "Y = data.loc[:, ['ans']]\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, train_size=0.8)\n",
+        "\n",
+        "# construct model\n",
+        "model = Sequential()\n",
+        "model.add(Dense(100, activation='relu', input_dim=3))\n",
+        "model.add(Dense(100, activation='relu'))\n",
+        "model.add(Dense(1, activation='linear'))\n",
+        "plot_model(model, to_file='DL_Model.png')\n",
+        "model.compile(loss='mean_squared_error', optimizer='Nadam', metrics=['accuracy'])\n",
+        "\n",
+        "model.fit(X_train, Y_train, epochs=100, batch_size=64, verbose=0)\n",
+        "score = model.evaluate(X_test, Y_test)\n",
+        "print(\"loss=%f, acc=%f\" % (score[0], score[1]))\n",
+        "\n",
+        "\n",
+        "#save model\n",
+        "import pickle\n",
+        "filename = \"drive/My Drive/Colab Notebooks/\"\n",
+        "filename += \"DL_model\"\n",
+        "filename += \".pickle\"\n",
+        "print(filename)\n",
+        "\n",
+        "with open(filename, mode='wb') as fp:\n",
+        "  pickle.dump(model, fp)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3816/3816 [==============================] - 1s 234us/step\n",
+            "loss=0.000014, acc=1.000000\n",
+            "drive/My Drive/Colab Notebooks/DL_model.pickle\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pq55NZcDrc1s",
+        "colab_type": "text"
+      },
+      "source": [
+        "deep learning の学習モデルを使って推論する"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l5ATamfzkI1y",
+        "colab_type": "code",
+        "outputId": "21b5899c-f206-4b9a-8744-1dd355152ed7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense\n",
+        "from keras.utils import plot_model\n",
+        "from pandas import DataFrame\n",
+        "import pickle\n",
+        "import numpy as np\n",
+        "\n",
+        "filename = \"drive/My Drive/Colab Notebooks/\"\n",
+        "filename += \"DL_model\"\n",
+        "filename += \".pickle\"\n",
+        "\n",
+        "\n",
+        "with open(filename, mode='rb') as fp:\n",
+        "  model = pickle.load(fp)\n",
+        "  \n",
+        "  # 加算\n",
+        "  ope, x, y = 1, 10, 200\n",
+        "  predected_answer = model.predict(np.array([[ope, x, y]]))\n",
+        "  print(\"{0} , {1}, {2} = {3}\".format(ope, x, y, int(predected_answer[0])))"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 , 10, 200 = 213\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
